--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test:auth": "node src/test/auth.js",
+    "test": "echo 'Run a specific test with npm test:<test>'"
   },
   "dependencies": {
     "@lexical/react": "^0.34.0",
@@ -15,12 +17,16 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/axios": "^0.9.36",
     "@types/date-fns": "^2.5.3",
+    "@types/http-status-codes": "^1.2.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.13.2",
+    "http-status-codes": "^2.3.0",
     "lexical": "^0.34.0",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
