--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/axios": "^0.9.36",
     "@types/date-fns": "^2.5.3",
     "@types/http-status-codes": "^1.2.0",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,6 +29,7 @@
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.13.2",
     "http-status-codes": "^2.3.0",
+    "js-cookie": "^3.0.5",
     "lexical": "^0.34.0",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
