--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "lexical": "^0.34.0",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
