--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.75.0",
     "@types/axios": "^0.9.36",
     "@types/date-fns": "^2.5.3",
     "@types/http-status-codes": "^1.2.0",
