--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/http-status-codes": "^1.2.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.12.2",
+    "axios-cache-interceptor": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -53,7 +54,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.11",
+    "@types/node": "^20.19.21",
     "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
